<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/require_name"
        android:textColor="@color/black"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:textSize="32sp"

        />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:hint="@string/click_for_input"
    android:id="@+id/name_text"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm"
        android:textSize="24sp"
        android:id="@+id/toGameBtn"

        />


</LinearLayout>