<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_start1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="0.80"
            android:contentDescription="@string/mission"
            android:gravity="start"
            android:src="@mipmap/z123" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btn_options"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_margin="12dp"
                android:src="@mipmap/btn_option" />

            <ImageView
                android:id="@+id/btn_help"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_toLeftOf="@id/btn_options"
                android:src="@mipmap/btn_help"

                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:layout_margin="48dp"
            android:background="@drawable/mybtn_1"
            android:text="@string/new_life"
            android:textSize="26sp"
            android:textStyle="bold"
            android:onClick="start_game"
            android:id="@+id/start_game_btn"
             />

        <Button
            android:onClick="toLoad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="48dp"
            android:background="@drawable/mybtn_1"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/load_save"
            android:textSize="30sp"
            android:textStyle="bold"

            />
    </LinearLayout>
</LinearLayout>
