<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@mipmap/panel"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:src="@drawable/head"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="9sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/green"
                android:textStyle="italic"
                android:text=""
                android:gravity="center"
                android:id="@+id/PlayerName"
                android:layout_gravity="center"
                style="@style/MainCharStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="力量:"
                style="@style/MainCharStyle"
                android:id="@+id/main_power"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="智力:"
                style="@style/MainCharStyle"
                android:id="@+id/main_wit"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="体质"
                style="@style/MainCharStyle"
                android:id="@+id/main_corporeity"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="运气:"
                style="@style/MainCharStyle"
                android:id="@+id/main_luck"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="速度:"
                style="@style/MainCharStyle"
                android:id="@+id/main_speed"
                />


            <TextView
                android:id="@+id/money"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:gravity="center"

                android:background = "@mipmap/money"
                android:textColor="#FFF68F"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#FFFAF0"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@mipmap/bk"
                android:text="@string/mission"
                android:textColor="@color/black"
                style="@style/MainMenuStyle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@mipmap/bk"
                android:text="@string/money_to_strong"
                style="@style/MainMenuStyle"
                android:onClick="toKeJin"
                android:clickable="true"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@mipmap/bk"
                style="@style/MainMenuStyle"
                android:text="@string/challenge"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@mipmap/bk"
                android:layout_marginBottom="48dp"
                android:text="@string/toWork"
                android:clickable="true"
                android:onClick="ToWork"
                style="@style/MainMenuStyle"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#D1EEEE"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@mipmap/bk"
                android:text="@string/music"
                style="@style/MainMenuStyle"
                />
            <TextView
                android:clickable="true"
                android:id="@+id/main_save"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@mipmap/bk"
                android:text="@string/toSave"
                style="@style/MainMenuStyle"
                />
            <TextView
                android:id="@+id/main_load"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@mipmap/bk"
                style="@style/MainMenuStyle"
                android:text="@string/toLoad"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="nextYear"
                android:background="@mipmap/rb_bg_1"
                style="@style/MainMenuStyle"
                android:text="@string/next_year"

                />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:id="@+id/full"
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:padding="5dp"
        android:text="你今年所剩时间："
        android:id="@+id/MonthRemain"
        android:textStyle="bold"
        android:textColor="#CD0000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:padding="5dp"
            android:text="你的寿命:"
            />
        <TextView
            android:id="@+id/progesss_value1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/percentage"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="2dp"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:text="20" />
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progesss1"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/myprogressbar"
            android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
            android:indeterminateOnly="false"
            android:max="100"
            android:maxHeight="50dp"
            android:minHeight="16dp"
            android:progress="20"
            android:progressDrawable="@drawable/myprogressbar" />
    </LinearLayout>
    </LinearLayout>

