<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF68F"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/panel"
            android:gravity="center"
            android:text="@string/money_strong"
            android:textColor="#FFF68F"
            android:textSize="50sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:src="@mipmap/btn_back"
            android:onClick="backMain"
            android:layout_marginTop="5sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:id="@+id/kejin_R1"
                >
                <RadioButton
                    android:id="@+id/random"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/random"
                    style="@style/KeJinRadioButtonStyle"
                    />
                <RadioButton
                    android:id="@+id/luck"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/luck"
                    style="@style/KeJinRadioButtonStyle"
                     />

                <RadioButton
                    android:id="@+id/power"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/power"
                    style="@style/KeJinRadioButtonStyle"
                    />
                <RadioButton
                    android:id="@+id/wit"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/wit"
                    style="@style/KeJinRadioButtonStyle"
                    />
                <RadioButton
                    android:id="@+id/speed"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/speed"
                    style="@style/KeJinRadioButtonStyle" />

                <RadioButton
                    android:id="@+id/corporeity"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:text="@string/corporeity"
                    style="@style/KeJinRadioButtonStyle" />
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:id="@+id/kejin_R2"
                >

                <RadioButton
                    android:id="@+id/GameCoin"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:text="游戏币支付 "
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="45dp"
                    android:layout_marginTop="45dp"
                    />

                <RadioButton
                    android:id="@+id/RMB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="25dp"
                    android:text="RMB支付"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="输入你需要金额:"
            android:textColor="@color/black"
            android:textSize="23sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
       <Button
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="3"
           android:layout_margin="5dp"
           android:text="-"
           android:textSize="20sp"
           android:textStyle="bold"
           android:onClick="deTextnum"
           />
        <EditText
            android:focusable="false"
            android:id="@+id/edit_money"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:text="0"
            android:textSize="32sp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_margin="5dp"
                android:text="+"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="addtextnum"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/mybtn_1"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="预览增加量"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="@drawable/mybtn_1"
                android:gravity="center"
                android:text="确认"
                android:textSize="32sp"
                android:id="@+id/confirm"
                android:clickable="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/bianqiang1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>